--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms_dashboard.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms_dashboard.html
@@ -27,7 +27,7 @@
         <div class="page_menu">
             <ul class="nav_menu_1">
                 <li class="">
-                <a href="#">My Courses </a>
+                <a href="#" {% if title == "my desk" %} class="selected" {% endif %}>My Courses </a>
                 </li>
                 <li class=""><a href="#">My Performance</a>
                 </li>
