--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms_header.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms_header.html
@@ -19,7 +19,7 @@
         <section class="top-bar-section">
             <!-- Left Nav Section -->
             <ul class="left show-for-large-up">
-                <li class="active"><a href="#">My Desk</a></li>
+                <li class="active"><a href="">My Desk</a></li>
                 <li><a href="#">Explore</a></li>
                 <li><a href="#">Repository</a></li>
                 <li><a href="#">Tools</a></li>
