--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
@@ -53,13 +53,13 @@
             
             {% if request.user.is_authenticated  %}            
                 {% if 'raw@material' in asset_obj.tags and is_gstaff and title == "raw_material_detail"  %}
-                <button type="button" class="orange-button add-asset-content right"><i class="fi-plus"></i> Add File1</button>
+                <button type="button" class="orange-button add-asset-content right"><i class="fi-plus"></i> Add File</button>
                 {% endif %}
                 {% if 'asset@gallery' in asset_obj.tags  %}
-                <button type="button" class="orange-button add-asset-content right"><i class="fi-plus"></i> Add File2</button>
+                <button type="button" class="orange-button add-asset-content right"><i class="fi-plus"></i> Add File</button>
                 {% endif %}
                 {% if title == 'asset_detail'  %}
-                <button type="button" class="orange-button add-asset-content right"><i class="fi-plus"></i> Add File3</button>
+                <button type="button" class="orange-button add-asset-content right"><i class="fi-plus"></i> Add File</button>
                 {% endif %}
 
             {% endif %}
