--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
@@ -4,6 +4,7 @@
 {% block title %} {{lesson_node.name}}  {% endblock %}
 
 {% load ndf_tags %}
+{% check_is_gstaff group_id request.user as is_gstaff %}
 
 {% block body_content %}
 
@@ -65,14 +66,14 @@
           <div class="small-8 columns">
             <div class="course_editor_section">
               <div class="input_links row">
-              {% for each in node.relation_set %}
-                {% if "has_help" in each %}
+              {% get_relation_value node.pk 'has_help' as grel_help %}
+              {% get_relation_value node.pk 'has_admin_page' as grel_admin_page %}
+                {% if grel_help.grel_id  %}
                   <a class="student-page right"> Student Help</a>
                 {% endif %}
-                {% if "has_admin_page" in each %}
-                  <a class="admin-page right"> Teacher's Help></a>
+                {% if  is_gstaff or user.is_superuser %}
+                  {% if grel_admin_page.grel_id %}<a class="admin-page right"> Teacher's Help></a>{% endif %}
                 {% endif  %}
-              {% endfor %}
               {% if node.player_discussion_enable %}
               <a class="discuss right"> Discuss</a>
               {% endif %}
