my performance commented

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms_dashboard.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms_dashboard.html
@@ -24,8 +24,8 @@
                 <li class="">
                 <a href="#" {% if title == "my desk" %} class="selected" {% endif %}>My Courses </a>
                 </li>
-                <li class=""><a href="#">My Performance</a>
-                </li>
+                
+                {% comment %}<li class=""><a href="#">My Performance</a> </li> {% endcomment %}
             </ul>
         </div>
 
