reirection issue in resources and gallery

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
@@ -23,7 +23,15 @@
             <a class="right close-reveal-modal reveal-modal-overlay" aria-label="Close">&#215;</a>
         {% endif %}
             <div class="small-1 columns icon-widget" style="margin-top: 5.6px;">
-                <a href="{% url 'asset_list' group_id %}""><i class="fa fa-chevron-left large" aria-hidden="true"></i></a>
+                  {% if title == "asset_detail" %}
+                <a href="{% url 'asset_list' group_id %}"><i class="fa fa-chevron-left large" aria-hidden="true"></i></a>
+                {% endif %}
+                {% if title == "raw_material_detail" %}
+                <a href="{% url 'course_raw_material' group_id %}"><i class="fa fa-chevron-left large" aria-hidden="true"></i></a>
+                {% endif %}
+                {% if title == "asset_gallery_detail" %}
+                <a href="{% url 'course_gallery' group_id %}"><i class="fa fa-chevron-left large" aria-hidden="true"></i></a>
+                {% endif %}
             </div>
 
             <div class="small-7 columns">
