--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
@@ -22,7 +22,7 @@
         </a>
 </div>
         <div class="header_title header_text_block">
-            {{group_name}}
+            <a href= "{% url 'groupchange' group_name %}"> {{group_name}}</a>
         </div>
         <div class="new_note header_text_block">
             <a href="{% url 'page_create_edit' group_name %}?course_event_id={{group_id}}&blog_type=True">
@@ -83,8 +83,8 @@
 
               </div>
               <div class="activity_page_rendered">
-                {# {{node.content|safe}} #}
-                {% include "ndf/node_ajax_content.html" with node=node  hide_breadcrumbs=True %}
+                {{node.content|safe}}
+                {# {% include "ndf/node_ajax_content.html" with node=node  hide_breadcrumbs=True %} #}
               </div>
 
                 {% if node.player_discussion_enable %}
