--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
@@ -24,13 +24,13 @@
         {% endif %}
             <div class="small-1 columns icon-widget" style="margin-top: 5.6px;">
                   {% if title == "asset_detail" %}
-                <a href="{% url 'asset_list' group_id %}"><i class="fa fa-chevron-left large" aria-hidden="true"></i></a>
+                <a href="javascript:window.history.back();"><i class="fa fa-chevron-left large" aria-hidden="true"></i></a>
                 {% endif %}
                 {% if title == "raw_material_detail" %}
-                <a href="{% url 'course_raw_material' group_id %}"><i class="fa fa-chevron-left large" aria-hidden="true"></i></a>
+                <a href="javascript:window.history.back();"><i class="fa fa-chevron-left large" aria-hidden="true"></i></a>
                 {% endif %}
                 {% if title == "asset_gallery_detail" %}
-                <a href="{% url 'course_gallery' group_id %}"><i class="fa fa-chevron-left large" aria-hidden="true"></i></a>
+                <a href="javascript:window.history.back();"><i class="fa fa-chevron-left large" aria-hidden="true"></i></a>
                 {% endif %}
             </div>
 
