add file renamed to add folder for gallery

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/assets.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/assets.html
@@ -17,7 +17,7 @@
             {% endif %}
             {% if title == "gallery"  %}
                 <button type="button" class="right orange-button createAsset">
-                    <i class="fi-plus"> </i>Add File 
+                    <i class="fi-plus"> </i>Add Folder 
                 </button>
             {% endif %}
             {% if title == "asset_list"  %}
