--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_about.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_about.html
@@ -154,7 +154,7 @@
           <i class="icon-wid fa fa-list"></i>
         </div>
         <div class="left module_text">
-          <h5>No. of Modules</h5>
+          <h5>No. of Lessons</h5>
           <div class="course-highlight">
              <span>{{group_object.collection_set|length}} Lessons{{group_object.collection_set|length|pluralize}}</span>
           </div>
