--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header_clix.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header_clix.html
@@ -126,7 +126,9 @@
 
             <!-- Left Nav Section -->
             <ul class="left show-for-medium-up">
+                {% if request.user.id %}
                 <li class=""><a href="{% url 'my_desk' request.user.id %}" {% if title == "my desk" %} class="active" {% endif %}>My Desk</a></li>
+                {% endif %}
                 <li><a  class="{%if title == 'courses'%}active{%endif%}" href="{% url explore_url %}"> Explore</a></li>
             </ul>
           </section>
