Hover colour on the activity player is updated

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -3223,7 +3223,7 @@ $ah_2_background_color_hover: rgba(244, 244, 244, 0.3);;
         }
 
         &:hover {
-            background-color: $ah_2_background_color_hover;
+            //background-color: $ah_2_background_color_hover;
         }
     }
 
