--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_about.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_about.html
@@ -121,7 +121,7 @@
               <a href="{% url 'tag_info' group_id tag %}">{{tag}} </a></label></small>
           {% endfor %} 
       {% else %}
-          <i><small><label class="tag-ele">{% trans "No tags defined yet!" %}</label></small></i>
+          <!-- <i><small><label class="tag-ele">{% trans "No tags defined yet!" %}</label></small></i> -->
       {% endif %}
   </div>
 
