--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/card_group.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/card_group.html
@@ -14,7 +14,9 @@
     {% elif first_arg %}
         <a href='{% url url_name first_arg %}{{search_url_text|safe}}'/>
     {% endif %}
-
+    {% if "base_unit" in node.member_of_names_list %}
+    <div class="raw_material_asset">DRAFT</div>
+    {% endif  %}
     <div class="unit_header">
     {% if "announced_unit" in node.member_of_names_list %}
         {% get_relation_value node.pk 'has_banner_pic' as grel_dict %}
