--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/in-line-texteditor.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/in-line-texteditor.html
@@ -232,7 +232,7 @@
                               url: "{% url 'get_ckeditor' group_id %}",
                               datatype: "html",
                               data:{
-                                      'ckeditor_toolbar' : "BasicToolbar"
+                                      'ckeditor_toolbar' : "{{ckeditor_toolbar}}"
 
                                 },
                             success: function(data) {
