redirection to LMS view if announced_unit only

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
@@ -205,7 +205,7 @@
                 </div>
 
                 <div class="small-8 medium-6 large-6 columns">
-                <label>Enter File Description <h9 style="color: red;">*</h9><br/>
+                <label>Enter File Description <br/>
                     <textarea rows="6" cols="2" class="small-12 columns" placeholder="Enter File Description" id="asset_content_desc"></textarea>
                 </label>
                     <button type="button" class="orange-button right" id="upload_asset" onclick="save_form()" style="margin-right: -3px;">Upload</button>
