--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_user_access_modal.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_user_access_modal.html
@@ -14,8 +14,7 @@
   </div>
 
 <script type="text/javascript">
-  
-  $(".user_not_enrolled").click(function(event){
+  $(document).on('click','.user_not_enrolled',function(){
       {% if request.user.is_authenticated %}
         $("#userDeniedLabel").text("Click on Enroll to continue and gain points")
         $(".user_actions .enroll-action").removeClass("hide")
