--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -4549,3 +4549,8 @@ ul.nav_menu_1 {
         margin-top: 5px;
     }
 }
+
+#course-notification
+    #status{
+        width: 100% !important;
+    }
