Added Rating to activity player, Validation for login and enroll at Notebook (in activity player), creating a new note (lms detail), commenting on a note (in-line-editor)

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms_dashboard.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms_dashboard.html
@@ -1,8 +1,11 @@
 {# lms_dashboard.html lms My Desk screen #}
 {% extends "ndf/gbase.html" %}
 
+{% block title %} My Desk {% endblock%}
 {% block body_content %}
 {% load ndf_tags %}
+
+
 
 
 <div class="mydesk_page">
