--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gnotebook.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gnotebook.html
@@ -1,5 +1,10 @@
-{% load get_course_filters get_username from ndf_tags %}
+{% load get_course_filters get_username user_access_policy from ndf_tags %}
+{% user_access_policy groupid request.user as user_access_priv %}
 {% load simple_filters %}
+
+
+
+{% include 'ndf/widget_user_access_modal.html' %}
 
 <div class="notebook">
     {% comment %}
@@ -73,7 +78,7 @@
                     {% comment %}
                     <a href="#" data-reveal-id="newNoteModal" class="button expand radius" style="margin: 0em 0em 1em;"><i class="fi-plus"></i> </a>
                     {% endcomment %}
-                    <a href="{% url 'page_create_edit' group_name %}?course_event_id={{group_id}}&blog_type=True" class="button radius" style="padding: 3px 11px;border-radius: 100%;float: right;margin: 5px 5px 8px 0px;border: 1px solid #6153AE;background: #fff;font-size: 23px;color: #6153AE;"><i class="fi-plus"></i></a>
+                    <a {% if user_access_priv == "allow" %} href="{% url 'page_create_edit' group_name %}?course_event_id={{group_id}}&blog_type=True" class="button radius" style="padding: 3px 11px;border-radius: 100%;float: right;margin: 5px 5px 8px 0px;border: 1px solid #6153AE;background: #fff;font-size: 23px;color: #6153AE;" {% else %} class="user_not_enrolled" {% endif %}><i class="fi-plus"></i></a>
 
                     {% endif %}
                 </div>
