--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
@@ -2,6 +2,7 @@
 
 {% load i18n %}
 {% load ndf_tags %}
+{% user_access_policy groupid request.user as user_access %}
 
 
 {% block title %} Unit {% endblock%}
@@ -87,7 +88,7 @@
      </li>
     <li>  <a href="{% url 'course_raw_material' group_id %}" {% if title == 'raw material' or title == "raw_material_detail"  %}class="selected"{% endif %}>Resources</a> </li>
     <li>
-    <li>  <a href="{% url 'course_gallery' group_id %}" {% if title == 'gallery' or title == "asset_gallery_detail" %}class="selected"{% endif %}>Gallery</a> </li>
+    <li>  <a  href="{% url 'course_gallery' group_id %}" {% if title == 'gallery' or title == "asset_gallery_detail" %} class="selected" {% endif %} >Gallery</a> </li>
     <li>
       <a href="{% url 'course_notebook' group_id %}" {% if title == 'notebook' %}class="selected"{% endif %}>Notebook</a>
     </li>
