updtaed css changes after applying validation condition in assets

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/assets.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/assets.html
@@ -18,7 +18,7 @@
                 </button>
             {% endif %}
             {% if title == "gallery"  %}
-                <button {% if user_access_priv == "allow" %} type="button" class=" createAsset" {% else %} class=" right orange-button user_not_enrolled" {% endif %}>
+                <button {% if user_access_priv == "allow" %} type="button" class="right orange-button createAsset" {% else %} class=" right orange-button user_not_enrolled" {% endif %}>
                     <i class="fi-plus"> </i>Add Folder 
                 </button>
             {% endif %}
